maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: ';' expected but '[' found.
      if (aBiscuit(i,j)) {return [i,j]}
                                 ^